--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,9 @@
 owner: 0ceanSlim
 repo: upptime
 status-website: true
+baseUrl: /upptime/
+siteName: HappyTavern Status
+siteDescription: Uptime monitoring for HappyTavern
 
 # Optional: Customize the status page name and description
 siteName: HappyTavern Status
